# Rusty-stuff

./: .gitignore  README.md
Experiments/RustySnakeRecreation/: Cargo.toml  README.md
Experiments/RustySnakeRecreation/src/: food.rs  game.rs  main.rs  snake.rs
Experiments/selection-menu-experiment/: Cargo.toml  LICENSE  README.md
Experiments/selection_menu_experiment/: Cargo.toml
Projects/FirstBevyGame/: Cargo.toml
Projects/FirstBevyGame/src/: constants.rs  definitions.rs  main.rs
Projects/FirstBevyGame/src/core/: components.rs  events.rs  mod.rs  resources.rs
Projects/FirstBevyGame/src/systems/: ball.rs  mod.rs  physics.rs  ui.rs
Projects/FirstBevyGame/src/systems/player/: camera.rs  mod.rs  movement.rs
