[package]
name = "selection-menu-experiment"
version = "0.1.0"
description = "An attempt to understand how TUI apps work with the ratatui crate."
authors = ["Rei <137615290+Reiventsu@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
